---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2022-12-??
  Changes:
    - Updated to 1.1.72
    - Made code more efficient by implementing a new algorithm for ore mining
  Fixes:
    - Fixed a bug with mining volume and frequency, leading to the harvester mining as much is 64 ores in a tick.
---------------------------------------------------------------------------------------------------
Version: 1.0.12
Date: 2021-02-07
  Changes:
    - Made the "Inventory full" warning larger, so as to be more visible.
    - Commented out some unused code to make to impact of a harvester smaller.
    - Updated to 1.1.35
  Fixes:
    - Fixed a compatability issue with other mods that use things named "harvester"
---------------------------------------------------------------------------------------------------
Version: 1.0.11
Date: 2021-02-06
  Changes:
    - Updated to 1.1.19
  Fixes:
    - Fixed a bug where the miner would mine, despite bing full, potentially killing the player via tiberium exposure or simply making a mess.
    - Fixed a bug where the miner "inventory full" warning would not show.
    - Fixed a bug where the miner "inventory full" warning was unredable.
    - Fixed a bug where the miner "inventory full" warning never expired.
---------------------------------------------------------------------------------------------------
Version: 1.0.10
Date: 2020-09-05
  Fixes:
    - Fixed a bug that made the previous fix not work.
---------------------------------------------------------------------------------------------------
Version: 1.0.9
  Fixes:
    - Fixed an issue with an upload not including a file.
---------------------------------------------------------------------------------------------------
Version: 1.0.8
  Changes:
    - Gave harvesters equipment grids.
  Fixes:
    - Fixed an issues where Tiberium dawn was an unmarked dependancy, it is now optional.