@@ -19,12 +19,12 @@ end
 
 
 --[[ function Consume_fuel_or_battery(cncharvesters)
-	local vehicle = player.vehicle
-	if vehicle.grid and vehicle.grid.available_in_batteries > 10000 and vehicle.grid.available_in_batteries > vehicle.grid.battery_capacity * 0.5 then
-		if fuel_items <1 then
-
-		end
+local vehicle = player.vehicle
+if vehicle.grid and vehicle.grid.available_in_batteries > 10000 and vehicle.grid.available_in_batteries > vehicle.grid.battery_capacity * 0.5 then
+	if fuel_items <1 then
+		
 	end
+end
 end ]]
 
 function On_Load()
@@ -41,9 +41,9 @@ end
 function On_Built(event)
 	local ent = event.created_entity or event.entity
 	if not (entity and entity.valid) then return end
-		if ent.name == "cncharvester" then
+	if ent.name == "cncharvester" then
 		table.insert(global.cncharvesters, cncharvester.New(ent))
-		elseif ent.name == "refinery" then
+	elseif ent.name == "refinery" then
 		table.insert(global.refineries, Refinery.New(ent))
 	end
 end
@@ -84,50 +84,50 @@ end
 )
 
 --[[ function On_Tick()
-	for _, player in pairs(game.connected_players) do
-		local vehicle = player.vehicle
-		if vehicle and (vehicle.name == 'cncharvester' or vehicle.name == 'cncharvester-ai' or vehicle.name == 'cncharvester-type2' or vehicle.name == 'cncharvester-type2-ai') then
-			local surface = vehicle.surface
-			local ore = surface.find_entities_filtered {
-				type = "resource",
-				area = getBoundingBox(vehicle.position, 2)
-			}
-			for _, entity in pairs(ore) do
-				if (entity.prototype.resource_category == "basic-solid") or (entity.prototype.resource_category == "basic-solid-tiberium") then
-					if entity.prototype.mineable_properties and entity.prototype.mineable_properties.minable and entity.prototype.mineable_properties.products then
-						local itemStack = {name = entity.prototype.mineable_properties.products[1].name, count = entity.prototype.mineable_properties.products[1].amount or 1}
-						if entity.valid and vehicle.can_insert(itemStack) then
-							entity.mine({inventory = vehicle.get_inventory(defines.inventory.car_trunk)})
-						else
-							rendering.draw_text{text="Inventory full", target=player.vehicle, surface=surface, scale=1.4, scale_with_zoom=true, color={r = 1, g = 1, b = 1, a = 1}, time_to_live=20}
-						end
+for _, player in pairs(game.connected_players) do
+	local vehicle = player.vehicle
+	if vehicle and (vehicle.name == 'cncharvester' or vehicle.name == 'cncharvester-ai' or vehicle.name == 'cncharvester-type2' or vehicle.name == 'cncharvester-type2-ai') then
+		local surface = vehicle.surface
+		local ore = surface.find_entities_filtered {
+			type = "resource",
+			area = getBoundingBox(vehicle.position, 2)
+		}
+		for _, entity in pairs(ore) do
+			if (entity.prototype.resource_category == "basic-solid") or (entity.prototype.resource_category == "basic-solid-tiberium") then
+				if entity.prototype.mineable_properties and entity.prototype.mineable_properties.minable and entity.prototype.mineable_properties.products then
+					local itemStack = {name = entity.prototype.mineable_properties.products[1].name, count = entity.prototype.mineable_properties.products[1].amount or 1}
+					if entity.valid and vehicle.can_insert(itemStack) then
+						entity.mine({inventory = vehicle.get_inventory(defines.inventory.car_trunk)})
+					else
+						rendering.draw_text{text="Inventory full", target=player.vehicle, surface=surface, scale=1.4, scale_with_zoom=true, color={r = 1, g = 1, b = 1, a = 1}, time_to_live=20}
 					end
 				end
 			end
-			-- find refinery's within a 4x4 square centered around the vehicle
-			local refineries = surface.find_entities_filtered {
-				name = "refinery",
-				area = getBoundingBox(vehicle.position, 5)
-			}
-			if #refineries > 0 then -- if the returned table has at least one entry
-				-- I think this is the correct inventory...I might be wrong
-				local inventory = vehicle.get_inventory(2)
-				local contents = inventory.get_contents()
-				local itemstack = {} -- temp var
-				for name, count in pairs(contents) do
-					itemstack.name = name
-					itemstack.count = count
-					-- loop through found refineries (err on side of caution, a radius of 5 might find more than one refinery)
-					for _, refinery in pairs(refineries) do
-						if refinery.can_insert(itemstack) then -- if this refinery can hold the items
-							refinery.insert(itemstack)
-							inventory.remove(itemstack) -- remove from inventory (the cncharvester)
-							break
-						end
+		end
+		-- find refinery's within a 4x4 square centered around the vehicle
+		local refineries = surface.find_entities_filtered {
+			name = "refinery",
+			area = getBoundingBox(vehicle.position, 5)
+		}
+		if #refineries > 0 then -- if the returned table has at least one entry
+			-- I think this is the correct inventory...I might be wrong
+			local inventory = vehicle.get_inventory(2)
+			local contents = inventory.get_contents()
+			local itemstack = {} -- temp var
+			for name, count in pairs(contents) do
+				itemstack.name = name
+				itemstack.count = count
+				-- loop through found refineries (err on side of caution, a radius of 5 might find more than one refinery)
+				for _, refinery in pairs(refineries) do
+					if refinery.can_insert(itemstack) then -- if this refinery can hold the items
+						refinery.insert(itemstack)
+						inventory.remove(itemstack) -- remove from inventory (the cncharvester)
+						break
 					end
 				end
-				while get_fuel_inventory(vehicle) find_empty_stack == true then
-					local fuel = fuel_items
+			end
+			while get_fuel_inventory(vehicle) find_empty_stack == true then
+				local fuel = fuel_items
 			end
 		end
 	end
@@ -135,73 +135,73 @@ end ]]
 
 local timer = 0
 function On_Tick()
-    -- Create a table to store the names of the cncharvester vehicles
-    local cncharvester_names = {'cncharvester', 'cncharvester-ai', 'cncharvester-type2', 'cncharvester-type2-ai'}
-
-    -- Iterate over the list of connected players and the list of ore entities
-    for _, player in pairs(game.connected_players) do
-        local vehicle = player.vehicle
+	-- Create a table to store the names of the cncharvester vehicles
+	local cncharvester_names = {'cncharvester', 'cncharvester-ai', 'cncharvester-type2', 'cncharvester-type2-ai'}
+	
+	-- Iterate over the list of connected players and the list of ore entities
+	for _, player in pairs(game.connected_players) do
+		local vehicle = player.vehicle
 		if vehicle then
 			for _, name in ipairs(cncharvester_names) do
-            local surface = vehicle.surface
-			local bounding_box_size = 1
-			if name == "cncharvester-type2" or name == "cncharvester-type2-ai" then
-				bounding_box_size = 2
-			end
-            local ore = surface.find_entities_filtered {
-                type = "resource",
-                area = getBoundingBox(vehicle.position, bounding_box_size)
-            }
-
-			-- Increment the timer and reset it if it reaches 10
-			timer = timer + 1
-			if timer >= 10 then
-				timer = 0  -- Reset the timer
-				for _, entity in pairs(ore) do
-					-- Check if the entity is a basic solid or tiberium resource
-					if (entity.prototype.resource_category == "basic-solid") or (entity.prototype.resource_category == "basic-solid-tiberium") then
-						if entity.prototype.mineable_properties and entity.prototype.mineable_properties.minable and entity.prototype.mineable_properties.products then
-							for _, product in pairs(entity.prototype.mineable_properties.products) do
-								local itemStack = {name = product.name, count = 4}
-								if entity.valid and vehicle.can_insert(itemStack) then
-									entity.mine({inventory = vehicle.get_inventory(defines.inventory.car_trunk)})
-								else
-									rendering.draw_text{text="Inventory full", target=player.vehicle, surface=surface, scale=1.4, scale_with_zoom=true, color={r = 1, g = 1, b = 1, a = 1}, time_to_live=20}
+				local surface = vehicle.surface
+				local bounding_box_size = 1
+				if name == "cncharvester-type2" or name == "cncharvester-type2-ai" then
+					bounding_box_size = 2
+				end
+				local ore = surface.find_entities_filtered {
+					type = "resource",
+					area = getBoundingBox(vehicle.position, bounding_box_size)
+				}
+				
+				-- Increment the timer and reset it if it reaches 10
+				timer = timer + 1
+				if timer >= 10 then
+					timer = 0  -- Reset the timer
+					for _, entity in pairs(ore) do
+						-- Check if the entity is a basic solid or tiberium resource
+						if (entity.prototype.resource_category == "basic-solid") or (entity.prototype.resource_category == "basic-solid-tiberium") then
+							if entity.prototype.mineable_properties and entity.prototype.mineable_properties.minable and entity.prototype.mineable_properties.products then
+								for _, product in pairs(entity.prototype.mineable_properties.products) do
+									local itemStack = {name = product.name, count = 4}
+									if entity.valid and vehicle.can_insert(itemStack) then
+										entity.mine({inventory = vehicle.get_inventory(defines.inventory.car_trunk)})
+									else
+										rendering.draw_text{text="Inventory full", target=player.vehicle, surface=surface, scale=1.4, scale_with_zoom=true, color={r = 1, g = 1, b = 1, a = 1}, time_to_live=20}
+									end
 								end
+								
 							end
-
 						end
 					end
 				end
-			end
-
-
-			-- find refinery's within a 4x4 square centered around the vehicle
-			local refineries = surface.find_entities_filtered {
-				name = "refinery",
-				area = getBoundingBox(vehicle.position, 5)
-			}
-			if #refineries > 0 then -- if the returned table has at least one entry
-				-- I think this is the correct inventory...I might be wrong
-				local inventory = vehicle.get_inventory(2)
-				local contents = inventory.get_contents()
-				local itemstack = {} -- temp var
-				for name, count in pairs(contents) do
-					itemstack.name = name
-					itemstack.count = count
-					-- loop through found refineries (err on side of caution, a radius of 5 might find more than one refinery)
-					for _, refinery in pairs(refineries) do
-						if refinery.can_insert(itemstack) then -- if this refinery can hold the items
-							refinery.insert(itemstack)
-							inventory.remove(itemstack) -- remove from inventory (the cncharvester)
-							break
+				
+				
+				-- find refinery's within a 4x4 square centered around the vehicle
+				local refineries = surface.find_entities_filtered {
+					name = "refinery",
+					area = getBoundingBox(vehicle.position, 5)
+				}
+				if #refineries > 0 then -- if the returned table has at least one entry
+					-- I think this is the correct inventory...I might be wrong
+					local inventory = vehicle.get_inventory(2)
+					local contents = inventory.get_contents()
+					local itemstack = {} -- temp var
+					for name, count in pairs(contents) do
+						itemstack.name = name
+						itemstack.count = count
+						-- loop through found refineries (err on side of caution, a radius of 5 might find more than one refinery)
+						for _, refinery in pairs(refineries) do
+							if refinery.can_insert(itemstack) then -- if this refinery can hold the items
+								refinery.insert(itemstack)
+								inventory.remove(itemstack) -- remove from inventory (the cncharvester)
+								break
+							end
 						end
 					end
 				end
 			end
 		end
 	end
-end
 end
 
 script.on_nth_tick(60, On_Tick)
