@@ -6,7 +6,15 @@ data:extend(
 			setting_type = "startup",
 			default_value = false,
 			per_user = false,
-		}--[[ ,
+		}
+		{
+			type = "bool-setting",
+			name = "harvester-auto-by-default",
+			setting_type = "startup",
+			default_value = false,
+			per_user = false,
+		}
+		--[[ ,
 		{
 			type = "int-setting",
 			name = "Auto-cncharvester-Ragne",
